--- a/t/index.html
+++ b/t/index.html
@@ -6,217 +6,12 @@
 <title>雨霖铃</title>
 <link href="0.css" rel="stylesheet" />
 <script>
-
-window.onload = function(){
-	/*scalex=0.5*848/window.screen.availWidth;
-	scaley=0.5*848/window.screen.availHeight;
-	scale=(scalex<scaley)?scalex:scaley;
-	//console.log(scalex+" "+ scaley+" "+ scale);
-	document.getElementById("view").setAttribute('content','user-scalable=yes, initial-scale='+scale.toFixed(2));*/
-	var oV = document.getElementById('v1');
-	var aInput = document.getElementsByTagName('input');
-	var oPauseplay = document.getElementById('pauseplay');
-	var oInfo = document.getElementById('info');
-	var oDiv1 = document.getElementById('div1');
-	var oDiv2 = document.getElementById('div2');
-	var oImg = document.getElementById('img');
-	
-	//if(isWeiXin()) oDiv1.style.top="-40px";
-	
-	var disX = 0;
-	var disX2 = 0;
-	
-	var timer = null;
-	if(oDiv1.offsetLeft==0) {oPauseplay.style.top = oPauseplay.style.top = oDiv1.offsetWidth*0.49 + 'px';}
-	
-	oPauseplay.onclick = function(){	
-		playPause();
-	};
-
-	function nowTime(){
-		
-		if( oV.paused ) oInfo.innerHTML="暂停中：雨霖铃 "+changeTime(oV.currentTime);
-		else {oInfo.innerHTML="播放中：雨霖铃 "+changeTime(oV.currentTime);}
-		var scale = oV.currentTime/oV.duration;
-		
-		oDiv2.style.left = scale * (oDiv1.offsetWidth-oDiv1.offsetHeight) + 'px';
-		if(scale==1) 
-		{
-			oV.pause();			
-			oInfo.innerHTML= '雨霖铃';
-			oPauseplay.src="play-button.png";	
-		}
-		
-		if(oV.currentTime>48.2) 
-		{
-			for(i=1;i<10;i++) document.getElementById('point'+i).style.display="none";
-			document.getElementById('word1').style.display="none";
-
-			for(i=1;i<9;i++) document.getElementById('point1'+i).style.display="block";
-			document.getElementById('word2').style.display="block";
-		}
-		else if (oV.currentTime<47.2 && oV.currentTime>0.2)
-		{
-			for(i=1;i<10;i++) document.getElementById('point'+i).style.display="block";
-			document.getElementById('word1').style.display="block";
-			
-			for(i=1;i<9;i++) document.getElementById('point1'+i).style.display="none";
-			document.getElementById('word2').style.display="none";
-		}
-		else
-		{
-			for(i=1;i<10;i++) document.getElementById('point'+i).style.display="none";
-			document.getElementById('word1').style.display="none";
-			
-			for(i=1;i<9;i++) document.getElementById('point1'+i).style.display="none";
-			document.getElementById('word2').style.display="none";
-		
-		}
-		
-	}
-	
-	function playPause(){
-		if( oV.paused ){			
-			oV.play();			
-			oInfo.innerHTML="雨霖铃";
-			oPauseplay.src="pause-button.png";			
-			nowTime();
-			timer = setInterval(nowTime,1000);		
-			oInfo.innerHTML="播放中：雨霖铃 "+changeTime(oV.currentTime);			
-		}
-		else{			
-			oV.pause();			
-			oInfo.innerHTML="暂停中：雨霖铃 "+changeTime(oV.currentTime);
-			oPauseplay.src="play-button.png";			
-			clearInterval(timer);		
-		}	
-	}
-	
-	
-	/**************************************************************/	
-	
-	
-	oDiv1.ontouchend = function(ev){
-		
-		var touchs = ev.changedTouches[0];
-		var disX = touchs.clientX  - oDiv1.offsetLeft-0.5*oDiv1.offsetHeight;
-		document.getElementById('info1')=disX;
-		//oDiv2.style.left = disX + 'px';
-		setBar(disX);
-		
-	};
-	
-	oDiv1.onclick = function(ev){
-		var ev = ev || window.event;
-		var disX = ev.clientX - oImg.offsetLeft-0.5*oDiv1.offsetHeight;
-		//console.log(disX);
-		//console.log(oImg.offsetLeft);
-		//oDiv2.style.left = disX + 'px';
-		setBar(disX);
-	};
-	
-	document.getElementById('point1').onclick = function(){ oV.currentTime = 5; nowTime(); };
-	document.getElementById('point2').onclick = function(){ oV.currentTime = 8.4; nowTime(); };
-	document.getElementById('point3').onclick = function(){ oV.currentTime = 11.6; nowTime(); };
-	document.getElementById('point4').onclick = function(){ oV.currentTime = 15.2; nowTime(); };
-	document.getElementById('point5').onclick = function(){ oV.currentTime = 21; nowTime(); };
-	document.getElementById('point6').onclick = function(){ oV.currentTime = 27.1; nowTime(); };
-	document.getElementById('point7').onclick = function(){ oV.currentTime = 31.6; nowTime(); };
-	document.getElementById('point8').onclick = function(){ oV.currentTime = 36.4; nowTime(); };
-	document.getElementById('point9').onclick = function(){ oV.currentTime = 41.3; nowTime(); };
-	
-	document.getElementById('point11').onclick = function(){ oV.currentTime = 47.7; nowTime(); };
-	document.getElementById('point12').onclick = function(){ oV.currentTime = 52.8; nowTime(); };
-	document.getElementById('point13').onclick = function(){ oV.currentTime = 58.1; nowTime(); };
-	document.getElementById('point14').onclick = function(){ oV.currentTime = 63; nowTime(); };
-	document.getElementById('point15').onclick = function(){ oV.currentTime = 68.5; nowTime(); };
-	document.getElementById('point16').onclick = function(){ oV.currentTime = 71.3; nowTime(); };
-	document.getElementById('point17').onclick = function(){ oV.currentTime = 76; nowTime(); };
-	document.getElementById('point18').onclick = function(){ oV.currentTime = 79.5; nowTime(); };
-	
-	/*************************************************************/
-	
-	
-	function changeTime(iNum){
-		
-		iNum = parseInt( iNum );
-		
-		var iH = toZero(Math.floor(iNum/3600));
-		var iM = toZero(Math.floor(iNum%3600/60));
-		var iS = toZero(Math.floor(iNum%60));
-		
-		return iM + ':' + iS;
-		
-	}
-	
-	function toZero(num){
-		if(num<=9){
-			return '0' + num;
-		}
-		else{
-			return '' + num;
-		}
-	}
-
-	oDiv2.onmousedown = function(ev){
-		var ev = ev || window.event;
-		disX = ev.clientX - oDiv2.offsetLeft;
-		
-		document.onmousemove = function(ev){
-			var ev = ev || window.event;			
-			var L = ev.clientX - disX;			
-			setBar(L);
-			
-		};
-		document.onmouseup = function(){
-			document.onmousemove = null;
-		};
-		return false;
-	};
-	
-	function setBar(L){
-	
-		if(L<0){
-			L = 0;
-		}
-		else if(L>oDiv1.offsetWidth - oDiv2.offsetWidth){
-			L = oDiv1.offsetWidth - oDiv2.offsetWidth;
-		}		
-		oDiv2.style.left = L + 'px';	
-		var scale = L/(oDiv1.offsetWidth - oDiv2.offsetWidth);		
-		oV.currentTime = scale * oV.duration;			
-		nowTime();
-	
-	}
-	
-/*	window.onresize=function(){  
-		if(oDiv1.offsetLeft==0)  oPauseplay.style.top = oDiv1.offsetWidth*0.49 + 'px';
-		else oPauseplay.style.top ='335px'; 
-		nowTime();
-	}  */
-	
-	
-};
-
-function isWeiXin(){
-  var ua = window.navigator.userAgent.toLowerCase();
-
-  if(ua.match(/MicroMessenger/i) == 'micromessenger'){
-  return true;
-  }else{
-  return false;
-  }
-}
-
+window.onload = function(){eval(function(p,a,c,k,e,d){e=function(c){return(c<a?"":e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)d[e(c)]=k[c]||e(c);k=[function(e){return d[e]}];e=function(){return'\\w+'};c=1;};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p;}('g c=a.b(\'1K\');g 1t=a.1u(\'1v\');g v=a.b(\'1q\');g w=a.b(\'1r\');g n=a.b(\'1s\');g q=a.b(\'1w\');g 1f=a.b(\'1A\');g u=0;g 1B=0;g Q=16;p(n.N==0){v.l.1g=v.l.1g=n.t*0.1C+\'W\'}v.j=d(){1j()};d E(){p(c.1h)w.x="1c：y "+F(c.f);B{w.x="17：y "+F(c.f)}g G=c.f/c.18;q.l.1b=G*(n.t-n.12)+\'W\';p(G==1){c.S();w.x=\'y\';v.z="R-X.C"}p(c.f>1x.2){r(i=1;i<10;i++)a.b(\'H\'+i).l.o="s";a.b(\'U\').l.o="s";r(i=1;i<9;i++)a.b(\'D\'+i).l.o="K";a.b(\'T\').l.o="K"}B p(c.f<1a.2&&c.f>0.2){r(i=1;i<10;i++)a.b(\'H\'+i).l.o="K";a.b(\'U\').l.o="K";r(i=1;i<9;i++)a.b(\'D\'+i).l.o="s";a.b(\'T\').l.o="s"}B{r(i=1;i<10;i++)a.b(\'H\'+i).l.o="s";a.b(\'U\').l.o="s";r(i=1;i<9;i++)a.b(\'D\'+i).l.o="s";a.b(\'T\').l.o="s"}}d 1j(){p(c.1h){c.R();w.x="y";v.z="S-X.C";E();Q=1y(E,1z);w.x="17：y "+F(c.f)}B{c.S();w.x="1c：y "+F(c.f);v.z="R-X.C";1p(Q)}}n.1l=d(m){g 1d=m.1n[0];g u=1d.I-n.N-0.5*n.12;J(u)};n.j=d(m){g m=m||Y.13;g u=m.I-1f.N-0.5*n.12;J(u)};d h(e){r(i=1;i<10;i++)a.b(\'H\'+i).z="h.C";r(i=1;i<9;i++)a.b(\'D\'+i).z="h.C";e.z="h.1o";E()}a.b(\'D\').j=d(){c.f=5;h(k)};a.b(\'1m\').j=d(){c.f=8.4;h(k)};a.b(\'1D\').j=d(){c.f=11.6;h(k)};a.b(\'1Y\').j=d(){c.f=15.2;h(k)};a.b(\'20\').j=d(){c.f=21;h(k)};a.b(\'23\').j=d(){c.f=27.1;h(k)};a.b(\'28\').j=d(){c.f=29.6;h(k)};a.b(\'24\').j=d(){c.f=25.4;h(k)};a.b(\'1X\').j=d(){c.f=1I.3;h(k)};a.b(\'1L\').j=d(){c.f=1a.7;h(k)};a.b(\'1F\').j=d(){c.f=1E.8;h(k)};a.b(\'1G\').j=d(){c.f=1M.1;h(k)};a.b(\'1R\').j=d(){c.f=1U;h(k)};a.b(\'1T\').j=d(){c.f=1O.5;h(k)};a.b(\'1N\').j=d(){c.f=1Q.3;h(k)};a.b(\'1J\').j=d(){c.f=1P;h(k)};a.b(\'1S\').j=d(){c.f=1H.5;h(k)};d F(A){A=26(A);g 22=O(Z.V(A/1e));g 19=O(Z.V(A%1e/1i));g 1k=O(Z.V(A%1i));P 19+\':\'+1k}d O(M){p(M<=9){P\'0\'+M}B{P\'\'+M}}q.1W=d(m){g m=m||Y.13;u=m.I-q.N;a.14=d(m){g m=m||Y.13;g L=m.I-u;J(L)};a.1V=d(){a.14=16};P 1Z};d J(L){p(L<0){L=0}B p(L>n.t-q.t){L=n.t-q.t}q.l.1b=L+\'W\';g G=L/(n.t-q.t);c.f=G*c.18;E()}',62,134,'||||||||||document|getElementById|oV|function||currentTime|var|snow||onclick|this|style|ev|oDiv1|display|if|oDiv2|for|none|offsetWidth|disX|oPauseplay|oInfo|innerHTML|雨霖铃|src|iNum|else|png|point1|nowTime|changeTime|scale|point|clientX|setBar|block||num|offsetLeft|toZero|return|timer|play|pause|word2|word1|floor|px|button|window|Math|||offsetHeight|event|onmousemove||null|播放中|duration|iM|47|left|暂停中|touchs|3600|oImg|top|paused|60|playPause|iS|ontouchend|point2|changedTouches|gif|clearInterval|pauseplay|info|div1|aInput|getElementsByTagName|input|div2|48|setInterval|1000|img|disX2|49|point3|52|point12|point13|79|41|point17|v1|point11|58|point16|68|76|71|point14|point18|point15|63|onmouseup|onmousedown|point9|point4|false|point5||iH|point6|point8|36|parseInt||point7|31'.split('|'),0,{}))};
 </script>
 </head>
 
 <body>
-	<!--div id="loading" class="loading">	
-		<div class="dot"></div>
-		<div class="num" id="num">加载中<br>0%</div>
-		<div class="info">雨霖铃</div>
-	</div-->
+
 	<div id="div0">
 		<div id="img"> 
 			<img class="vimg" id="word1" src="word1.png">
