--- a/s/4/index.html
+++ b/s/4/index.html
@@ -37,7 +37,13 @@
 	{ "pic":"city/chongqing.png","lng":106.53,"lat":29.55,"w":0.1,"h":0.1,"city":"重庆","time":"3月29日~3月31日"},
 	{ "pic":"city/zhangzhou.png","lng":117.35,"lat":24.51,"w":0.1,"h":0.1,"city":"漳州","time":"4月2日~4月3日"},];
 eval(function(p,a,c,k,e,d){e=function(c){return(c<a?"":e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)d[e(c)]=k[c]||e(c);k=[function(e){return d[e]}];e=function(){return'\\w+'};c=1;};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p;}('a c=8 7.1f("V",{T:S,U:6,P:11});c.Q(8 7.R());a L=8 7.b(15.1,14.17);a K=10;c.16(L,K);c.W(Z);Y(a i=0;i<4.z;i++){a J=8 7.b(4[i].f-4[i].w*2,4[i].d-4[i].h*2);a E=8 7.b(4[i].f+4[i].w*2,4[i].d+4[i].h*2);a n=8 7.y(8 7.x(J,E),{v:1,C:6,A:12});n.s(4[i].X);c.p(n);(j(i){n.u("r",j(e){o(i)},"t")})(i);g=i-1;D(i==0)g=4.z-1;a F=8 7.b(4[i].f-0.12-0.1,4[i].d*1.q-0.3-0.1);a O=8 7.b(4[i].f-0.12+0.1,4[i].d*1.q-0.3+0.1);a m=8 7.y(8 7.x(F,O),{v:1,C:9,A:12});m.s("m.G");c.p(m);(j(g){m.u("r",j(e){c.N(8 7.b(4[g].f,4[g].d));o(g)},"t")})(g);k=i+1;D(i==4.z-1)k=0;a H=8 7.b(4[i].f+0.12-0.1,4[i].d*1.q-0.3-0.1);a I=8 7.b(4[i].f+0.12+0.1,4[i].d*1.q-0.3+0.1);a l=8 7.y(8 7.x(H,I),{v:1,C:9,A:12});l.s("l.G");c.p(l);(j(k){l.u("r",j(e){c.N(8 7.b(4[k].f,4[k].d));o(k)},"t")})(k);a M=8 7.19([8 7.b(4[g].f,4[g].d-0.13),8 7.b(4[i].f,4[i].d-0.13)],{1d:"1c",1h:3,1b:0.5});c.p(M)}j o(B){18.1a("1e").1j="1i "+4[B].n+" "+4[B].1g}',62,82,'||||pointinfo|||BMap|new||var|Point|map|lat||lng|previd|||function|nextid|next|prev|city|showinfo|addOverlay|0015|click|setImageURL|false|addEventListener|opacity||Bounds|GroundOverlay|length|displayOnMaxLevel|id|displayOnMinLevel|if|NE|SWp|png|SWn|NEn|SW|zoom|point|polyline|panTo|NEp|maxZoom|addControl|MapTypeControl|BMAP_SATELLITE_MAP|mapType|minZoom|allmap|enableScrollWheelZoom|pic|for|true|||||24|118|centerAndZoom|46|document|Polyline|getElementById|strokeOpacity|red|strokeColor|info|Map|time|strokeWeight|图书漂流计划|innerHTML'.split('|'),0,{}))
-
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?439358a13dd7d051457e74498ba9a08e";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
 
 
   
