--- a/index.html
+++ b/index.html
@@ -1,258 +1,108 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
 <head>
-<meta id="view" name="viewport" content="width=device-width, initial-scale=0.5">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>雨霖铃</title>
-<link href="0.css" rel="stylesheet" />
-<script>
-
-window.onload = function(){
-	/*scalex=848/window.screen.availWidth;
-	scaley=500/window.screen.availHeight;
-	scale=(scalex<scaley)?scalex:scaley;
-	//console.log(scalex+" "+ scaley+" "+ scale);
-	document.getElementById("view").setAttribute('content','user-scalable=yes, width=device-width, initial-scale='+scale.toFixed(2));*/
-	var oV = document.getElementById('v1');
-	var aInput = document.getElementsByTagName('input');
-	var oPauseplay = document.getElementById('pauseplay');
-	var oInfo = document.getElementById('info');
-	var oDiv1 = document.getElementById('div1');
-	var oDiv2 = document.getElementById('div2');
-	var oImg = document.getElementById('img');
+	<style type="text/css"> 
+	body
+	  {
+		background-color:#535353;
+	  }
+	  
+	a {
+		color:#aaa;
+		text-decoration: none;
+	} /* 已或未访问链接颜色 */
+		
+	a:hover {
+		color:#fff;	
+		text-decoration: none;
+	} /* 悬停时链接颜色 */
 	
-	//if(isWeiXin()) oDiv1.style.top="-40px";
-	
-	var disX = 0;
-	var disX2 = 0;
-	
-	var timer = null;
-	if(oDiv1.offsetLeft==0) {oPauseplay.style.top = oPauseplay.style.top = oDiv1.offsetWidth*0.49 + 'px';}
-	
-	oPauseplay.onclick = function(){	
-		playPause();
-	};
-
-	function nowTime(){
-		
-		if( oV.paused ) oInfo.innerHTML="暂停中：雨霖铃 "+changeTime(oV.currentTime);
-		else {oInfo.innerHTML="播放中：雨霖铃 "+changeTime(oV.currentTime);}
-		var scale = oV.currentTime/oV.duration;
-		
-		oDiv2.style.left = scale * (oDiv1.offsetWidth-oDiv1.offsetHeight) + 'px';
-		if(scale==1) 
-		{
-			oV.pause();			
-			oInfo.innerHTML= '雨霖铃';
-			oPauseplay.src="play-button.png";	
-		}
-		
-		if(oV.currentTime>48.2) 
-		{
-			for(i=1;i<10;i++) document.getElementById('point'+i).style.display="none";
-			document.getElementById('word1').style.display="none";
-
-			for(i=1;i<9;i++) document.getElementById('point1'+i).style.display="block";
-			document.getElementById('word2').style.display="block";
-		}
-		else if (oV.currentTime<47.2 && oV.currentTime>0.2)
-		{
-			for(i=1;i<10;i++) document.getElementById('point'+i).style.display="block";
-			document.getElementById('word1').style.display="block";
-			
-			for(i=1;i<9;i++) document.getElementById('point1'+i).style.display="none";
-			document.getElementById('word2').style.display="none";
-		}
-		else
-		{
-			for(i=1;i<10;i++) document.getElementById('point'+i).style.display="none";
-			document.getElementById('word1').style.display="none";
-			
-			for(i=1;i<9;i++) document.getElementById('point1'+i).style.display="none";
-			document.getElementById('word2').style.display="none";
-		
-		}
-		
+	#foot{
+		color:#000;
+		font-size:14px;
 	}
 	
-	function playPause(){
-		if( oV.paused ){			
-			oV.play();			
-			oInfo.innerHTML="雨霖铃";
-			oPauseplay.src="pause-button.png";			
-			nowTime();
-			timer = setInterval(nowTime,1000);		
-			oInfo.innerHTML="播放中：雨霖铃 "+changeTime(oV.currentTime);			
-		}
-		else{			
-			oV.pause();			
-			oInfo.innerHTML="暂停中：雨霖铃 "+changeTime(oV.currentTime);
-			oPauseplay.src="play-button.png";			
-			clearInterval(timer);		
-		}	
+	#foots{
+		color:#000;
+		font-size:18px;
 	}
 	
+	#title{
+		font-size:50px;
+	}	
 	
-	/**************************************************************/	
+	#sub{
+		font-size:40px;
+	}		
 	
+	#content{
+		font-size:30px;
+	}	
 	
-	oDiv1.ontouchend = function(ev){
-		
-		var touchs = ev.changedTouches[0];
-		var disX = touchs.clientX  - oDiv1.offsetLeft-0.5*oDiv1.offsetHeight;
-		document.getElementById('info1')=disX;
-		//oDiv2.style.left = disX + 'px';
-		setBar(disX);
-		
-	};
-	
-	oDiv1.onclick = function(ev){
-		var ev = ev || window.event;
-		var disX = ev.clientX - oImg.offsetLeft-0.5*oDiv1.offsetHeight;
-		//console.log(disX);
-		//console.log(oImg.offsetLeft);
-		//oDiv2.style.left = disX + 'px';
-		setBar(disX);
-	};
-	
-	document.getElementById('point1').onclick = function(){ oV.currentTime = 5; nowTime(); };
-	document.getElementById('point2').onclick = function(){ oV.currentTime = 8.4; nowTime(); };
-	document.getElementById('point3').onclick = function(){ oV.currentTime = 11.6; nowTime(); };
-	document.getElementById('point4').onclick = function(){ oV.currentTime = 15.2; nowTime(); };
-	document.getElementById('point5').onclick = function(){ oV.currentTime = 21; nowTime(); };
-	document.getElementById('point6').onclick = function(){ oV.currentTime = 27.1; nowTime(); };
-	document.getElementById('point7').onclick = function(){ oV.currentTime = 31.6; nowTime(); };
-	document.getElementById('point8').onclick = function(){ oV.currentTime = 36.4; nowTime(); };
-	document.getElementById('point9').onclick = function(){ oV.currentTime = 41.3; nowTime(); };
-	
-	document.getElementById('point11').onclick = function(){ oV.currentTime = 47.7; nowTime(); };
-	document.getElementById('point12').onclick = function(){ oV.currentTime = 52.8; nowTime(); };
-	document.getElementById('point13').onclick = function(){ oV.currentTime = 58.1; nowTime(); };
-	document.getElementById('point14').onclick = function(){ oV.currentTime = 63; nowTime(); };
-	document.getElementById('point15').onclick = function(){ oV.currentTime = 68.5; nowTime(); };
-	document.getElementById('point16').onclick = function(){ oV.currentTime = 71.3; nowTime(); };
-	document.getElementById('point17').onclick = function(){ oV.currentTime = 76; nowTime(); };
-	document.getElementById('point18').onclick = function(){ oV.currentTime = 79.5; nowTime(); };
-	
-	/*************************************************************/
-	
-	
-	function changeTime(iNum){
-		
-		iNum = parseInt( iNum );
-		
-		var iH = toZero(Math.floor(iNum/3600));
-		var iM = toZero(Math.floor(iNum%3600/60));
-		var iS = toZero(Math.floor(iNum%60));
-		
-		return iM + ':' + iS;
-		
-	}
-	
-	function toZero(num){
-		if(num<=9){
-			return '0' + num;
-		}
-		else{
-			return '' + num;
-		}
-	}
-
-	oDiv2.onmousedown = function(ev){
-		var ev = ev || window.event;
-		disX = ev.clientX - oDiv2.offsetLeft;
-		
-		document.onmousemove = function(ev){
-			var ev = ev || window.event;			
-			var L = ev.clientX - disX;			
-			setBar(L);
-			
-		};
-		document.onmouseup = function(){
-			document.onmousemove = null;
-		};
-		return false;
-	};
-	
-	function setBar(L){
-	
-		if(L<0){
-			L = 0;
-		}
-		else if(L>oDiv1.offsetWidth - oDiv2.offsetWidth){
-			L = oDiv1.offsetWidth - oDiv2.offsetWidth;
-		}		
-		oDiv2.style.left = L + 'px';	
-		var scale = L/(oDiv1.offsetWidth - oDiv2.offsetWidth);		
-		oV.currentTime = scale * oV.duration;			
-		nowTime();
-	
-	}
-	
-/*	window.onresize=function(){  
-		if(oDiv1.offsetLeft==0)  oPauseplay.style.top = oDiv1.offsetWidth*0.49 + 'px';
-		else oPauseplay.style.top ='335px'; 
-		nowTime();
-	}  */
-	
-	
-};
-
-function isWeiXin(){
-  var ua = window.navigator.userAgent.toLowerCase();
-
-  if(ua.match(/MicroMessenger/i) == 'micromessenger'){
-  return true;
-  }else{
-  return false;
-  }
-}
-
-</script>
-</head>
+    </style>
+	<meta charste="utf-8">
+	<title>361全景</title>
 
 <body>
-	<!--div id="loading" class="loading">	
-		<div class="dot"></div>
-		<div class="num" id="num">加载中<br>0%</div>
-		<div class="info">雨霖铃</div>
-	</div-->
-	<div id="div0">
-		<div id="img"> 
-			<img class="vimg" id="word1" src="word1.png">
-			<img class="vimg" id="point1" src="snow.png">
-			<img class="vimg" id="point2" src="snow.png">
-			<img class="vimg" id="point3" src="snow.png">
-			<img class="vimg" id="point4" src="snow.png">
-			<img class="vimg" id="point5" src="snow.png">
-			<img class="vimg" id="point6" src="snow.png">
-			<img class="vimg" id="point7" src="snow.png">
-			<img class="vimg" id="point8" src="snow.png">
-			<img class="vimg" id="point9" src="snow.png">
-			
-			<img class="vimg" id="word2" src="word2.png">
-			<img class="vimg" id="point11" src="snow.png">
-			<img class="vimg" id="point12" src="snow.png">
-			<img class="vimg" id="point13" src="snow.png">
-			<img class="vimg" id="point14" src="snow.png">
-			<img class="vimg" id="point15" src="snow.png">
-			<img class="vimg" id="point16" src="snow.png">
-			<img class="vimg" id="point17" src="snow.png">
-			<img class="vimg" id="point18" src="snow.png">
-			
-			<img class="vimg" id="pauseplay" src="play-button.png" > 
-		</div>
-		
-		<video id="v1"  width="848" height="500" x5-video-player-type="h5" x5-video-orientation="landscape|portrait" style="object-fit: fill;">
-			<source src="ttsj1.mp4" type="video/mp4" />
-			<source src="ttsj1.ogg" type="video/ogg" />
-			Your browser does not support HTML5 video.
-		</video>
-			
-		<div id="div1">
-			<div id="div2"></div>
-			<div id="info">雨霖铃</div>
-		</div>
-	</div>
+
+<h1 id="title" align="center" >361全景</h1><br>
+
+<h2 id="sub" name="sub" align="center">*作品*<br><br>
+
+<div id="content" align="center">
+	<!--a name="file" href="/0">文昌阁</a><br-->
+	<a name="file" href="/3">龙文塔</a> <a name="file" href="/2">铁索桥</a><br>
+	<a name="file" href="/5">云洞岩</a> <a name="file" href="/6">火车站</a><br>
+	<a name="file" href="/7">聚星阁</a> <a name="file" href="/8">夜塔楼</a> <br>
+	<a name="file" href="/9">厦金海岸</a> <a name="file" href="/10">金砖会址</a><br>
+	<a name="file" href="/4">西溪湿地</a> <a name="file" href="/1">苏区兵工厂</a><br>
+	<a name="file" href="/c/whcjdq.jpg">长图全景</a><br>
+
+</div>
+
+<br>
+
+<div id="foot" align="center" >
+Copyright © 2017 - 2018 361all. All Rights Reserved.<br>
+</div>
+
+<div id="foots" align="center" >
+	<a href="help.html">帮助</a>
+	<!--a href="mailto:3378270384@qq.com">邮箱取照</a-->
+	<a href="email.html">邮箱取照</a>
+	<!--a href="login.html">自助取照</a-->
+</div>
+
+
+<br>
+
 </body>
+
+<script language=javascript>
+
+function IsPC() {
+    var userAgentInfo = navigator.userAgent;
+    var Agents = ["Android", "iPhone",
+                "SymbianOS", "Windows Phone",
+                "iPad", "iPod"];
+    var flag = true;
+    for (var v = 0; v < Agents.length; v++) {
+        if (userAgentInfo.indexOf(Agents[v]) > 0) {
+            flag = false;
+            break;
+        }
+    }
+    return flag;
+}
+
+if(IsPC()!=true)
+{	
+	document.getElementById('title').style.fontSize="72px";
+	document.getElementById('sub').style.fontSize="54px";
+	document.getElementById('content').style.fontSize="48px";
+	document.getElementById('foot').style.fontSize="28px";
+	document.getElementById('foots').style.fontSize="42px";
+
+}
+ </script>
+ 
 </html>
