--- a/s/4/index.html
+++ b/s/4/index.html
@@ -10,11 +10,10 @@
     </style>
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=uIGNq6dLthEQ5iM5G8mNfCl1BDDfWx9d"></script>
     <title>图书漂流</title>
-	<script>
-var _hmt = _hmt || [];
+    <script>var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?439358a13dd7d051457e74498ba9a08e";
+  hm.src = "https://hm.baidu.com/hm.js?09dfab50c9fa995c474a9bbc84574701";
   var s = document.getElementsByTagName("script")[0]; 
   s.parentNode.insertBefore(hm, s);
 })();
