--- a/s/index.html
+++ b/s/index.html
@@ -2,15 +2,7 @@
 <html>
 <head>
 <title>test</title>
-<script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?09dfab50c9fa995c474a9bbc84574701";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
+<script type="text/javascript" src="../bdtj.js"></script>
 </head>
 <body>
 </body>
