--- a/s/4/index.html
+++ b/s/4/index.html
@@ -9,15 +9,8 @@
 		#info{text-align:center; }
     </style>
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=uIGNq6dLthEQ5iM5G8mNfCl1BDDfWx9d"></script>
+    <script type="text/javascript" src="../bdtj.js"></script>
     <title>图书漂流</title>
-    <script>var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?09dfab50c9fa995c474a9bbc84574701";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
 </head>
 <body>
 <div id="allmap"></div>
