--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
     </style>
 	<meta charste="utf-8">
 	<title>361全景</title>
-
+	<script type="text/javascript" src="bdtj.js"></script>
+</head>
 <body>
 
 <h1 id="title" align="center" >361全景</h1><br>
