--- a/s/4/index.html
+++ b/s/4/index.html
@@ -9,7 +9,7 @@
 		#info{text-align:center; }
     </style>
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=uIGNq6dLthEQ5iM5G8mNfCl1BDDfWx9d"></script>
-    <script type="text/javascript" src="../bdtj.js"></script>
+    <script type="text/javascript" src="../../bdtj.js"></script>
     <title>图书漂流</title>
 </head>
 <body>
