--- a/s/2/index.html
+++ b/s/2/index.html
@@ -168,6 +168,7 @@ body{
 }
 
 	</style>
+	<script type="text/javascript" src="../../bdtj.js"></script>
 </head>
 <body>
 <div id="loading" class="loading">	
