--- a/d/3/index.html
+++ b/d/3/index.html
@@ -8,6 +8,7 @@
 <script>
 window.onload = function(){eval(function(p,a,c,k,e,d){e=function(c){return(c<a?"":e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)d[e(c)]=k[c]||e(c);k=[function(e){return d[e]}];e=function(){return'\\w+'};c=1;};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p;}('g c=a.b(\'1K\');g 1t=a.1u(\'1v\');g v=a.b(\'1q\');g w=a.b(\'1r\');g n=a.b(\'1s\');g q=a.b(\'1w\');g 1f=a.b(\'1A\');g u=0;g 1B=0;g Q=16;p(n.N==0){v.l.1g=v.l.1g=n.t*0.1C+\'W\'}v.j=d(){1j()};d E(){p(c.1h)w.x="1c：y "+F(c.f);B{w.x="17：y "+F(c.f)}g G=c.f/c.18;q.l.1b=G*(n.t-n.12)+\'W\';p(G==1){c.S();w.x=\'y\';v.z="R-X.C"}p(c.f>1x.2){r(i=1;i<10;i++)a.b(\'H\'+i).l.o="s";a.b(\'U\').l.o="s";r(i=1;i<9;i++)a.b(\'D\'+i).l.o="K";a.b(\'T\').l.o="K"}B p(c.f<1a.2&&c.f>0.2){r(i=1;i<10;i++)a.b(\'H\'+i).l.o="K";a.b(\'U\').l.o="K";r(i=1;i<9;i++)a.b(\'D\'+i).l.o="s";a.b(\'T\').l.o="s"}B{r(i=1;i<10;i++)a.b(\'H\'+i).l.o="s";a.b(\'U\').l.o="s";r(i=1;i<9;i++)a.b(\'D\'+i).l.o="s";a.b(\'T\').l.o="s"}}d 1j(){p(c.1h){c.R();w.x="y";v.z="S-X.C";E();Q=1y(E,1z);w.x="17：y "+F(c.f)}B{c.S();w.x="1c：y "+F(c.f);v.z="R-X.C";1p(Q)}}n.1l=d(m){g 1d=m.1n[0];g u=1d.I-n.N-0.5*n.12;J(u)};n.j=d(m){g m=m||Y.13;g u=m.I-1f.N-0.5*n.12;J(u)};d h(e){r(i=1;i<10;i++)a.b(\'H\'+i).z="h.C";r(i=1;i<9;i++)a.b(\'D\'+i).z="h.C";e.z="h.1o";E()}a.b(\'D\').j=d(){c.f=5;h(k)};a.b(\'1m\').j=d(){c.f=8.4;h(k)};a.b(\'1D\').j=d(){c.f=11.6;h(k)};a.b(\'1Y\').j=d(){c.f=15.2;h(k)};a.b(\'20\').j=d(){c.f=21;h(k)};a.b(\'23\').j=d(){c.f=27.1;h(k)};a.b(\'28\').j=d(){c.f=29.6;h(k)};a.b(\'24\').j=d(){c.f=25.4;h(k)};a.b(\'1X\').j=d(){c.f=1I.3;h(k)};a.b(\'1L\').j=d(){c.f=1a.7;h(k)};a.b(\'1F\').j=d(){c.f=1E.8;h(k)};a.b(\'1G\').j=d(){c.f=1M.1;h(k)};a.b(\'1R\').j=d(){c.f=1U;h(k)};a.b(\'1T\').j=d(){c.f=1O.5;h(k)};a.b(\'1N\').j=d(){c.f=1Q.3;h(k)};a.b(\'1J\').j=d(){c.f=1P;h(k)};a.b(\'1S\').j=d(){c.f=1H.5;h(k)};d F(A){A=26(A);g 22=O(Z.V(A/1e));g 19=O(Z.V(A%1e/1i));g 1k=O(Z.V(A%1i));P 19+\':\'+1k}d O(M){p(M<=9){P\'0\'+M}B{P\'\'+M}}q.1W=d(m){g m=m||Y.13;u=m.I-q.N;a.14=d(m){g m=m||Y.13;g L=m.I-u;J(L)};a.1V=d(){a.14=16};P 1Z};d J(L){p(L<0){L=0}B p(L>n.t-q.t){L=n.t-q.t}q.l.1b=L+\'W\';g G=L/(n.t-q.t);c.f=G*c.18;E()}',62,134,'||||||||||document|getElementById|oV|function||currentTime|var|snow||onclick|this|style|ev|oDiv1|display|if|oDiv2|for|none|offsetWidth|disX|oPauseplay|oInfo|innerHTML|雨霖铃|src|iNum|else|png|point1|nowTime|changeTime|scale|point|clientX|setBar|block||num|offsetLeft|toZero|return|timer|play|pause|word2|word1|floor|px|button|window|Math|||offsetHeight|event|onmousemove||null|播放中|duration|iM|47|left|暂停中|touchs|3600|oImg|top|paused|60|playPause|iS|ontouchend|point2|changedTouches|gif|clearInterval|pauseplay|info|div1|aInput|getElementsByTagName|input|div2|48|setInterval|1000|img|disX2|49|point3|52|point12|point13|79|41|point17|v1|point11|58|point16|68|76|71|point14|point18|point15|63|onmouseup|onmousedown|point9|point4|false|point5||iH|point6|point8|36|parseInt||point7|31'.split('|'),0,{}))};
 </script>
+<script type="text/javascript" src="../../bdtj.js"></script>
 </head>
 
 <body>
@@ -53,7 +54,8 @@ window.onload = function(){eval(function(p,a,c,k,e,d){e=function(c){return(c<a?"
 			一般地，制作好的视频是相对静止的元素，不具交互属性。<br>
 			有时需视频元素是交互的，比如这里可通过点击视频文字切换进度。<br>
 			此DEMO中，暂停时视频上页面元素依然是可操作的。<br>
-			只做示意，暂停时，点击文字展开注释、注音等的制作并未展开。
+			只做示意，暂停时，点击文字展开注释、注音等的制作并未展开。<br>
+			此示意DEMO未对各类浏览器作兼容，推荐在PC端Chrome浏览器访问。
 		</div>
 	</div>
 </body>
